# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-15 03:07:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-46

    Summary:
      Width working
    Revision:
      missingh--head--0.5--patch-46


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Printer.lhs


2004-11-15 03:04:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-45

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-45


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-15 02:39:16 GMT	John Goerzen <jgoerzen@complete.org>	patch-44

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-44


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 02:17:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-43

    Summary:
      New parser running
    Revision:
      missingh--head--0.5--patch-43


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 02:03:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-42

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-42


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs


2004-11-15 01:34:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-41

    Summary:
      Added printf tests
    Revision:
      missingh--head--0.5--patch-41


    new files:
     testsrc/Printftest.hs

    modified files:
     ChangeLog testsrc/Tests.hs


2004-11-15 00:21:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-40

    Summary:
      Basic printf is working
    Revision:
      missingh--head--0.5--patch-40


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Printer.lhs


2004-11-14 23:53:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-39

    Summary:
      Checkpointing work
    Revision: