@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-15 03:18:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-47
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingh--head--0.5--patch-47
+
+
+    modified files:
+     ChangeLog testsrc/Printftest.hs
+
+
 2004-11-15 03:07:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-46
 
     Summary:
